Applied finishing touches to button and other css elements

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <i class="fa-solid fa-quote-right"></i>
       </h2>
       <p class="author" id="author">~ Author</p>
-      <button class="btn" id="btn">Get a quote</button>
+      <button class="btn" id="btn">Get Quote</button>
     </div>
     <script src="app.js"></script>
   </body>
